<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">StoryApp</string>
    <string name="input_warning" translatable="false">Password must be 8 character or more</string>
    <string name="required" translatable="false">Required</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="email_address">Email Address</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="invalid_password">password must be contain 8 characters or more</string>
    <string name="invalid_email">enter a valid email address!</string>
    <string name="empty_email">email can not be empty!</string>
    <string name="empty_password">password can not be empty</string>
    <string name="button_login">LOGIN</string>
    <string name="button_register">Register</string>
    <string name="already_registered">Have an account? Login here</string>
    <string name="create_account">Doesn\'t have an account?</string>
    <string name="menu_logout">Logout</string>
    <string name="story_thumbnail">Story Thumbnail</string>
    <string name="item_name">Item Name</string>
    <string name="detail_name">Detail Name</string>
    <string name="detail_description">Detail Description</string>
    <string name="detail_photo">Detail Photo</string>
    <string name="add_story">Add Story</string>
    <string name="camera">Camera</string>
    <string name="image_preview">Image Preview</string>
    <string name="gallery">Gallery</string>
    <string name="add_description">Add Description</string>
    <string name="upload_story">Upload Story</string>
    <string name="choose_image">Choose an Image</string>
    <string name="register_title">REGISTER</string>
    <string name="login_title">LOGIN</string>
    <string name="change_language">Change Language</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps">Maps</string>
    <string name="include_location">Include Location</string>
    <string name="retry">Retry</string>
    <string name="capture_image">Capture Image</string>
    <string name="switch_camera">Switch Camera</string>
</resources>